export interface Recargable {

    autonomia:string

    cargar(carga:number):void
    descargar(descarga:number):void
}