import { Vehiculo } from "./vehiculo";

export interface VehiculoRecargable extends Vehiculo, Vehiculo {

} 