@startuml "Herencia entre Interfases"

interface Vehiculo  {
    - marca:string
    - modelo:string
    - velocidadMax:number

    encender():void
    apagar():void
    acelerar():void
    frenar():void

}

interface Recargable {
    - autonomia:string

    cargar(number):void
    descargar(number):void
}

interface VehiculoRecargable {

}

class BiciElectrica {
    - pedalear():void
}

class AutoElectrico {
    manejoAutonomo():void
}

class MonopatinElectrico {
    ajustarAltura():void
    plegar():void
}

Vehiculo <|-- VehiculoRecargable
Recargable <|-- VehiculoRecargable
AutoElectrico <..VehiculoRecargable
BiciElectrica <.. VehiculoRecargable
MonopatinElectrico <.. VehiculoRecargable

@enduml